// Vitest Snapshot v1

exports[`Dropdown > Dropdown baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-31515850=""
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-31515850=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      <span
        class="tdesign-demo-dropdown__text"
        data-v-31515850=""
      >
         更多 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-31515850=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            data-v-31515850=""
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown buttonVue demo works fine 1`] = `
<div
  data-v-b123bb1e=""
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square"
    data-v-b123bb1e=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      <svg
        class="t-icon t-icon-ellipsis"
        data-v-b123bb1e=""
      >
        <use
          href="#t-icon-ellipsis"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown customVue demo works fine 1`] = `
<div
  data-v-33c84f30=""
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-33c84f30=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-503db2fb=""
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-503db2fb=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      <span
        class="tdesign-demo-dropdown__text"
        data-v-503db2fb=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-503db2fb=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            data-v-503db2fb=""
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown eventVue demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown longVue demo works fine 1`] = `
<div
  data-v-1c484a7b=""
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-1c484a7b=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown multipleVue demo works fine 1`] = `
<div
  class="tdesign-demo-dropdown"
  data-v-cbef96e2=""
>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    data-v-cbef96e2=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      <span
        class="tdesign-demo-dropdown__text"
        data-v-cbef96e2=""
      >
         下拉菜单 
        <svg
          class="t-icon t-icon-chevron-down"
          data-v-cbef96e2=""
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
            data-v-cbef96e2=""
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Dropdown > Dropdown slotVue demo works fine 1`] = `
<div
  class="t-space t-space-vertical"
  style="gap: 16px;"
>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-vertical"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <h4>
          支持直接使用 t-dropdown-menu
        </h4>
      </div>
      <div
        class="t-space-item"
      >
        <span>
          <button
            class="t-button t-size-m t-button--variant-text t-button--theme-default"
            type="button"
          >
            <span
              class="t-button__text"
            >
              下拉菜单
            </span>
          </button>
          <div
            class="t-dropdown__menu t-dropdown__menu--right"
            style="max-height: 300px;"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="t-space-item"
  >
    <div
      class="t-space t-space-vertical"
      style="gap: 16px;"
    >
      <div
        class="t-space-item"
      >
        <h4>
          兼容历史版本 通过 dropdown 具名插槽的使用
        </h4>
      </div>
      <div
        class="t-space-item"
      >
        <button
          class="t-button t-size-m t-button--variant-text t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            下拉菜单
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > Dropdown splitVue demo works fine 1`] = `
<div
  data-v-7fd82e2b=""
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    data-v-7fd82e2b=""
    type="button"
  >
    <span
      class="t-button__text"
    >
      下拉菜单
    </span>
  </button>
</div>
`;
